--- a/NuGet.Config
+++ b/NuGet.Config
@@ -3,6 +3,6 @@
   <packageSources>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-    <add key="soneta" value="\\files\PUBLICZNY\NuGet" />
+    <add key="soneta" value="https://nuget.soneta.pl/v3/index.json" />
   </packageSources>
 </configuration>
